src/objects/CQT_CoffeeSample__c.object
<CustomObject>
    <fields>
        <fullName>CoffeeBerryBorerPercent__c</fullName>
        <label>% Coffee Berry Borer</label>
        <picklist>
            <picklistValues>
                <fullName>0.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Farm__c</fullName>
        <label>Farm</label>
        <referenceTo>CBL2_Farm__c</referenceTo>
        <relationshipLabel>CQT_CoffeeSamples_Farm</relationshipLabel>
        <relationshipName>CQT_CoffeeSamples_Farm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrainFirstGroupPercent__c</fullName>
        <label>% Grain First Group</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Humidity__c</fullName>
        <label>% Humidity</label>
        <picklist>
            <picklistValues>
                <fullName>8.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LAC_Farmer__c</fullName>
        <label>LAC Farmer</label>
        <referenceTo>LAC_Farmer_Details__c</referenceTo>
        <relationshipLabel>CQT_CoffeeSamples_LAC_FD</relationshipLabel>
        <relationshipName>CQT_CoffeeSamples_LAC_FD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <label>Lot</label>
        <referenceTo>CBL2_Lot__c</referenceTo>
        <relationshipLabel>CQT_CoffeeSamples_Lot</relationshipLabel>
        <relationshipName>CQT_CoffeeSamples_Lot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SampleDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Sample Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;new&quot;</defaultValue>
        <description>values: new and analyzed</description>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variety__c</fullName>
        <label>Variety</label>
        <picklist>
            <picklistValues>
                <fullName>Blue Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bourbon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castillo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catimor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catuai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catuai 44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caturra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garnica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geisha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icatu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lempira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maragogipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mondo Novo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montecristo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacamara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pache</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pache Colis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruiru11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarchimor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sumatra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tekisisc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CQT_CoffeeSample</label>
    <nameField>
        <label>CQT_CoffeeSample Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CQT_CoffeeSamples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>